[gd_scene load_steps=4 format=3 uid="uid://ha7n5qqp8mnd"]

[ext_resource type="Script" path="res://Portal/Scripts/Behaviors/portal.gd" id="1_l70gx"]
[ext_resource type="PackedScene" uid="uid://bg2mi3hyw3mw4" path="res://Portal/Instances/MeshInst.tscn" id="2_fvurw"]

[sub_resource type="BoxShape3D" id="BoxShape3D_n8005"]
size = Vector3(1.5, 3, 0.25)

[node name="Portal" type="Node3D"]
script = ExtResource("1_l70gx")

[node name="PortalAsset" parent="." instance=ExtResource("2_fvurw")]

[node name="Renderer" type="SubViewport" parent="."]

[node name="Camera3D" type="Camera3D" parent="Renderer"]
cull_mask = 1048573

[node name="CamController" type="RemoteTransform3D" parent="."]
remote_path = NodePath("../Renderer/Camera3D")

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
shape = SubResource("BoxShape3D_n8005")

[connection signal="body_entered" from="Area3D" to="." method="_teleport_obj"]
[connection signal="body_exited" from="Area3D" to="." method="_reset_teleport"]
